Updated Transparency for all NBA Logos

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -2644,7 +2644,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": 756,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def oddsToProb(american_odds):\n",
+    "    american_odds = float(american_odds)\n",
+    "    if american_odds < 0:\n",
+    "        return 100 / ((american_odds*-1) + 100)\n",
+    "    else:\n",
+    "        return american_odds / (american_odds + 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 766,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2709,6 +2723,7 @@
     "        mkt_comparison.ml_pick = mkt_comparison.ml_pick.apply(lambda x: \"W\" if x else \"L\")\n",
     "        odds_df = mkt_comparison.loc[:, [\"moneyline_home\", \"moneyline_away\", \"spread_odds_home\", \"spread_odds_away\", \"over_odds\", \"under_odds\", \"game_id\"]]\n",
     "        mkt_comparison = mkt_comparison.loc[:, [\"spread_pick\", \"total_pick\", \"ml_pick\", \"game_id\"]]\n",
+    "        self.prob_matrix = odds_df.copy(deep=True)\n",
     "        for col in [c for c in odds_df.columns if c != \"game_id\"]:\n",
     "            odds_df[col] = odds_df[col].apply(oddsFlip)\n",
     "        odds_matrix = pd.DataFrame()\n",
@@ -2716,6 +2731,7 @@
     "        odds_matrix[\"spread_odds\"] = np.where(mkt_comparison.spread_pick == \"W\", odds_df.spread_odds_home, odds_df.spread_odds_away)\n",
     "        odds_matrix[\"total_odds\"] = np.where(mkt_comparison.ml_pick == \"O\", odds_df.over_odds, odds_df.under_odds)\n",
     "        odds_matrix[\"book\"] = book\n",
+    "        odds_matrix = odds_matrix.fillna(0)\n",
     "        self.odds_matrix = odds_matrix\n",
     "        [(mkt_comparison.spread_pick == \"W\"), (mkt_comparison.spread_pick == \"L\")]\n",
     "        [(mkt_comparison.spread_pick == \"O\"), (mkt_comparison.spread_pick == \"U\")]\n",
@@ -2732,14 +2748,20 @@
     "        self.winnings_matrix = pd.DataFrame()\n",
     "        _odds = self.odds_matrix.query(f\"book == '{book}'\")\n",
     "        for c in [x for x in _odds.columns if x != \"book\"]:\n",
-    "            _odds[c] = _odds[c].fillna(0)\n",
     "            _odds[c] = (_odds[c] / 100).astype(\"float32\").apply(round, ndigits=4)\n",
     "        _grades = self.graded_picks.query(f\"book == '{book}'\").loc[:, [\"ml_pk\", \"spread_pk\", \"total_pk\"]]\n",
     "        for market in [m for m in _grades.columns]:\n",
     "            self.winnings_matrix[market.replace(\"pk\", \"winnings\")] = np.select([_grades[market]==\"W\", _grades[market]==\"P\", _grades[market]==\"L\"], [1+_odds[market.replace(\"pk\", \"odds\")], 1, -1]) \n",
     "        self.winnings_matrix = self.winnings_matrix * self.unit\n",
     "        self.winnings_matrix[\"book\"] = book\n",
-    "        return self.winnings_matrix\n"
+    "        return self.winnings_matrix\n",
+    "\n",
+    "    def create_probability_matrix(self):\n",
+    "        for col in [x for x in self.prob_matrix.columns if x != \"game_id\"]:\n",
+    "            self.prob_matrix[col] = self.prob_matrix[col].apply(oddsToProb).astype(\"float32\")\n",
+    "        return self.prob_matrix\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -2756,7 +2778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 767,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2765,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 748,
+   "execution_count": 768,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2774,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 749,
+   "execution_count": 769,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2783,7 +2805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 770,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2792,7 +2814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 751,
+   "execution_count": 771,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2801,7 +2823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 772,
    "metadata": {},
    "outputs": [
     {
@@ -2931,7 +2953,7 @@
        "[3417 rows x 4 columns]"
       ]
      },
-     "execution_count": 752,
+     "execution_count": 772,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2942,22 +2964,333 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": 773,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ml_winnings</th>\n",
+       "      <th>spread_winnings</th>\n",
+       "      <th>total_winnings</th>\n",
+       "      <th>book</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27.9400</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>BetOnline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41.8925</td>\n",
+       "      <td>47.7275</td>\n",
+       "      <td>48.8100</td>\n",
+       "      <td>BetOnline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>27.2725</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>48.8100</td>\n",
+       "      <td>BetOnline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31.4925</td>\n",
+       "      <td>47.1250</td>\n",
+       "      <td>46.9300</td>\n",
+       "      <td>BetOnline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>128.7500</td>\n",
+       "      <td>48.3650</td>\n",
+       "      <td>51.2500</td>\n",
+       "      <td>BetOnline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3412</th>\n",
+       "      <td>36.9050</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>48.8100</td>\n",
+       "      <td>BetOnline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3413</th>\n",
+       "      <td>68.0000</td>\n",
+       "      <td>48.1475</td>\n",
+       "      <td>48.8100</td>\n",
+       "      <td>BetOnline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3414</th>\n",
+       "      <td>40.6250</td>\n",
+       "      <td>48.1475</td>\n",
+       "      <td>48.5850</td>\n",
+       "      <td>BetOnline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3415</th>\n",
+       "      <td>45.3250</td>\n",
+       "      <td>49.7525</td>\n",
+       "      <td>49.2725</td>\n",
+       "      <td>BetOnline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3416</th>\n",
+       "      <td>34.8050</td>\n",
+       "      <td>48.8100</td>\n",
+       "      <td>47.7275</td>\n",
+       "      <td>BetOnline</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3417 rows × 4 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "149923.675"
+       "      ml_winnings  spread_winnings  total_winnings       book\n",
+       "0         27.9400         -25.0000        -25.0000  BetOnline\n",
+       "1         41.8925          47.7275         48.8100  BetOnline\n",
+       "2         27.2725         -25.0000         48.8100  BetOnline\n",
+       "3         31.4925          47.1250         46.9300  BetOnline\n",
+       "4        128.7500          48.3650         51.2500  BetOnline\n",
+       "...           ...              ...             ...        ...\n",
+       "3412      36.9050         -25.0000         48.8100  BetOnline\n",
+       "3413      68.0000          48.1475         48.8100  BetOnline\n",
+       "3414      40.6250          48.1475         48.5850  BetOnline\n",
+       "3415      45.3250          49.7525         49.2725  BetOnline\n",
+       "3416      34.8050          48.8100         47.7275  BetOnline\n",
+       "\n",
+       "[3417 rows x 4 columns]"
       ]
      },
-     "execution_count": 755,
+     "execution_count": 773,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample.create_winnings(\"BetOnline\", 25).ml_winnings.sum()"
+    "sample.create_winnings(\"BetOnline\", 25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 774,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>moneyline_home</th>\n",
+       "      <th>moneyline_away</th>\n",
+       "      <th>spread_odds_home</th>\n",
+       "      <th>spread_odds_away</th>\n",
+       "      <th>over_odds</th>\n",
+       "      <th>under_odds</th>\n",
+       "      <th>game_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.105263</td>\n",
+       "      <td>0.863946</td>\n",
+       "      <td>0.487805</td>\n",
+       "      <td>0.465116</td>\n",
+       "      <td>0.492611</td>\n",
+       "      <td>0.460829</td>\n",
+       "      <td>1026833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.403226</td>\n",
+       "      <td>0.561404</td>\n",
+       "      <td>0.476190</td>\n",
+       "      <td>0.476190</td>\n",
+       "      <td>0.465116</td>\n",
+       "      <td>0.487805</td>\n",
+       "      <td>1026598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.885714</td>\n",
+       "      <td>0.469484</td>\n",
+       "      <td>0.483092</td>\n",
+       "      <td>0.465116</td>\n",
+       "      <td>0.487805</td>\n",
+       "      <td>1026528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.206186</td>\n",
+       "      <td>0.764706</td>\n",
+       "      <td>0.483092</td>\n",
+       "      <td>0.469484</td>\n",
+       "      <td>0.485437</td>\n",
+       "      <td>0.467290</td>\n",
+       "      <td>1026763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.163934</td>\n",
+       "      <td>0.805825</td>\n",
+       "      <td>0.469484</td>\n",
+       "      <td>0.483092</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.512195</td>\n",
+       "      <td>1027523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3412</th>\n",
+       "      <td>0.322581</td>\n",
+       "      <td>0.642857</td>\n",
+       "      <td>0.487805</td>\n",
+       "      <td>0.465116</td>\n",
+       "      <td>0.465116</td>\n",
+       "      <td>0.487805</td>\n",
+       "      <td>1347636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3413</th>\n",
+       "      <td>0.632353</td>\n",
+       "      <td>0.336700</td>\n",
+       "      <td>0.480769</td>\n",
+       "      <td>0.471698</td>\n",
+       "      <td>0.465116</td>\n",
+       "      <td>0.487805</td>\n",
+       "      <td>1347606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3414</th>\n",
+       "      <td>0.384615</td>\n",
+       "      <td>0.583333</td>\n",
+       "      <td>0.480769</td>\n",
+       "      <td>0.471698</td>\n",
+       "      <td>0.467290</td>\n",
+       "      <td>0.485437</td>\n",
+       "      <td>1412811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3415</th>\n",
+       "      <td>0.448430</td>\n",
+       "      <td>0.507389</td>\n",
+       "      <td>0.497512</td>\n",
+       "      <td>0.456621</td>\n",
+       "      <td>0.460829</td>\n",
+       "      <td>0.492611</td>\n",
+       "      <td>1412496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3416</th>\n",
+       "      <td>0.281690</td>\n",
+       "      <td>0.682540</td>\n",
+       "      <td>0.465116</td>\n",
+       "      <td>0.487805</td>\n",
+       "      <td>0.476190</td>\n",
+       "      <td>0.476190</td>\n",
+       "      <td>1285591</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3417 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      moneyline_home  moneyline_away  spread_odds_home  spread_odds_away  \\\n",
+       "0           0.105263        0.863946          0.487805          0.465116   \n",
+       "1           0.403226        0.561404          0.476190          0.476190   \n",
+       "2           0.083333        0.885714          0.469484          0.483092   \n",
+       "3           0.206186        0.764706          0.483092          0.469484   \n",
+       "4           0.163934        0.805825          0.469484          0.483092   \n",
+       "...              ...             ...               ...               ...   \n",
+       "3412        0.322581        0.642857          0.487805          0.465116   \n",
+       "3413        0.632353        0.336700          0.480769          0.471698   \n",
+       "3414        0.384615        0.583333          0.480769          0.471698   \n",
+       "3415        0.448430        0.507389          0.497512          0.456621   \n",
+       "3416        0.281690        0.682540          0.465116          0.487805   \n",
+       "\n",
+       "      over_odds  under_odds  game_id  \n",
+       "0      0.492611    0.460829  1026833  \n",
+       "1      0.465116    0.487805  1026598  \n",
+       "2      0.465116    0.487805  1026528  \n",
+       "3      0.485437    0.467290  1026763  \n",
+       "4      0.444444    0.512195  1027523  \n",
+       "...         ...         ...      ...  \n",
+       "3412   0.465116    0.487805  1347636  \n",
+       "3413   0.465116    0.487805  1347606  \n",
+       "3414   0.467290    0.485437  1412811  \n",
+       "3415   0.460829    0.492611  1412496  \n",
+       "3416   0.476190    0.476190  1285591  \n",
+       "\n",
+       "[3417 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 774,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample.create_probability_matrix()"
    ]
   },
   {
