Added Proper Stats and Filters to gamelog.js

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -25472,7 +25472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2003,
+   "execution_count": 2111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25481,11 +25481,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2004,
+   "execution_count": 2112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_picks[\"spread_team\"] = np.select(condlist=[(team_picks.spread_pick == \"W\"), (team_picks.spread_pick == \"L\")], choicelist=[team_picks.home_abbv, team_picks.away_abbv])\n",
+    "team_picks[\"spread_team\"] = np.select(condlist=[(team_picks.spread_pick == \"W\"), (team_picks.spread_pick == \"L\"),  (team_picks.spread_pick == \"P\")], choicelist=[team_picks.home_abbv, team_picks.away_abbv, \"PUSH\"])\n",
     "team_picks[\"ml_team\"] = np.select(condlist=[(team_picks.ml_pick == \"W\"), (team_picks.ml_pick == \"L\")], choicelist=[team_picks.home_abbv, team_picks.away_abbv])"
    ]
   },
@@ -25837,20 +25837,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2054,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_picks.merge(ma_10_ex_mean.graded_picks, on=[\"game_id\", \"book\"]).to_csv(\"../data/interim/team_picks.csv\", index=False)"
+    "team_picks.merge(ma_10_ex_mean.graded_picks, on=[\"game_id\", \"book\"]).to_csv(\"../data/interim/website/dash/team_picks.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2063,
+   "execution_count": 2105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_10_ex_mean.winnings_matrix.merge(ma_10_ex_mean.projections.loc[:, [\"game_id\", \"season\"]], on=\"game_id\").to_csv(\"../data/interim/winnings_dash.csv\", index=False)"
+    "winnings_dash = ma_10_ex_mean.winnings_matrix.merge(ma_10_ex_mean.projections.loc[:, [\"game_id\", \"season\"]], on=\"game_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "winnings_dash[\"agg_winnings\"] = winnings_dash[\"ml_winnings\"] + winnings_dash[\"spread_winnings\"] + winnings_dash[\"total_winnings\"] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "winnings_dash.to_csv(\"../data/interim/winnings_dash.csv\", index=False)"
    ]
   },
   {
