Game Page Posts Correct Markets and Model Projections for all Games

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -25969,20 +25969,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2088,
+   "execution_count": 2114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wanted_factors.to_csv(\"../data/interim/table_results.csv\", index=False)"
+    "wanted_factors.to_csv(\"../data/interim/website/game_log/table_results.csv\", index=False, float_format=\"%.4f\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2089,
+   "execution_count": 2115,
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_table.to_csv(\"../data/interim/summary_table_results.csv\", index=False)"
+    "summary_table.to_csv(\"../data/interim/website/game_log/summary_table_results.csv\", index=False, float_format=\"%.4f\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "most_appearing_book = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Opening': 0, 'BetNow': 1, 'BetOnline': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, row in summary_table.loc[:, [x for x in summary_table.columns if \"_book\" in x ]].drop(\"metric_book\", axis=1).iterrows():\n",
+    "    counter = {}\n",
+    "    for col in row:\n",
+    "        if col not in counter.keys():\n",
+    "            counter[col] = 1\n",
+    "        else:\n",
+    "            counter[col] = counter[col] + 1\n",
+    "    counter[\"Opening\"] = 0\n",
+    "    counter =  dict(sorted(counter.items(), key=lambda x: x[1]))\n",
+    "    if i == 1:\n",
+    "        print(counter)\n",
+    "    most_appearing_book[i] = list(counter.keys())[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_table = summary_table.merge(pd.Series(most_appearing_book, name=\"Best_Book\"), left_index=True, right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wanted_factors_2 = wanted_factors.loc[:, [\"home_abbv\", \"away_abbv\", \"pts_home\", \"pts_away\", \"m3_proj_home\", \"m3_proj_away\", \"date\", \"season\",\"game_id\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wanted_factors_2 = wanted_factors_2.merge(summary_table.loc[:, [\"game_id\", 'moneyline_home_number', 'spread_home_number',  'total_number',\n",
+    "'moneyline_home_book', 'spread_home_book','total_book','ml_pk', 'spread_pk', 'total_pk']], on=\"game_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wanted_factors_2 = wanted_factors_2.loc[:, ['home_abbv', 'away_abbv', 'pts_home', 'pts_away', 'm3_proj_home',\n",
+    "       'm3_proj_away', 'moneyline_home_number', 'spread_home_number', 'total_number', 'moneyline_home_book',\n",
+    "       'spread_home_book', 'total_book', 'ml_pk', 'spread_pk', 'total_pk', 'date', 'season', 'game_id']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wanted_factors_2 = wanted_factors_2.merge(summary_table.loc[:, [\"game_id\",'Best_Book']], on=\"game_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['home_abbv', 'away_abbv', 'pts_home', 'pts_away', 'm3_proj_home',\n",
+       "       'm3_proj_away', 'moneyline_home_number', 'spread_home_number',\n",
+       "       'total_number', 'moneyline_home_book', 'spread_home_book', 'total_book',\n",
+       "       'ml_pk', 'spread_pk', 'total_pk', 'date', 'season', 'game_id',\n",
+       "       'Best_Book'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wanted_factors_2.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wanted_factors_2 = wanted_factors_2.loc[:, ['home_abbv', 'away_abbv', 'pts_home', 'pts_away', 'm3_proj_home',\n",
+    "       'm3_proj_away', 'moneyline_home_number', 'spread_home_number',\n",
+    "       'total_number', 'ml_pk', 'spread_pk', 'total_pk', 'Best_Book',\n",
+    "       'date', 'season', 'game_id']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wanted_factors_2 = wanted_factors_2.sort_values(\"date\").reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wanted_factors_2.to_csv(\"../data/interim/website/game_log/table_results.csv\", index=False, float_format=\"%.2f\")"
    ]
   },
   {
