Added Spread Graph to Game Page and Update Navbar on All Webpages

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -26146,20 +26146,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2091,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2264,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_10_ex_mean.timeseries.to_csv(\"../data/interim/timeseries_game.csv\", index=False)"
+    "_std = ma_10_ex_mean.timeseries.groupby([\"book\", \"game_id\"]).std().unstack().T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2093,
+   "execution_count": 2265,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_10_ex_mean.markets.to_csv(\"../data/interim/markets_game.csv\", index=False)"
+    "_std[\"calc\"] = \"std\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2266,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_open = ma_10_ex_mean.timeseries.groupby([\"book\", \"game_id\"]).first().unstack().T.drop(\"timestamp\", axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2267,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_open[\"calc\"] = \"open\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2268,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_close = ma_10_ex_mean.timeseries.groupby([\"book\", \"game_id\"]).last().unstack().T.drop(\"timestamp\", axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_close[\"calc\"] = \"close\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_movement = ma_10_ex_mean.timeseries.groupby([\"book\", \"game_id\"]).count().unstack().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2271,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_movement[\"calc\"] = \"movements\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2272,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_highest = ma_10_ex_mean.timeseries.groupby([\"book\", \"game_id\"]).min().unstack().T.drop(\"timestamp\", axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_highest[\"calc\"] = \"high\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_lowest = ma_10_ex_mean.timeseries.groupby([\"book\", \"game_id\"]).max().unstack().T.drop(\"timestamp\", axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2275,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_lowest[\"calc\"] = \"low\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first = Open, last = Close, std = market movement, min = highest number for home team, max = lowest number for away team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_data =  pd.concat([_highest, _lowest, _movement, _close, _open, _std], axis=0).sort_index().sort_values(\"game_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2292,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_data.to_csv(\"../data/interim/website/game_log/time_agg.csv\", index_label=[\"market\", \"game_id\"],float_format=\"%.3f\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2091,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ma_10_ex_mean.timeseries.to_csv(\"../data/interim/website/game_log/timeseries_game.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2294,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ma_10_ex_mean.markets.to_csv(\"../data/interim/website/game/markets_game.csv\", index=False, float_format=\"%.2f\")"
    ]
   },
   {
@@ -26169,12 +26325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2103,
+   "execution_count": 2183,
    "metadata": {},
    "outputs": [],
    "source": [
     "market_projection.merge(ma_10_ex_mean.projections.loc[:,  [\"home_abbv\", \"away_abbv\", \"efg_pct_home\", \"orb_pct_home\", 'tov_pct_home',\t'fta_per_fga_pct_home',\t'efg_pct_away',\t'orb_pct_away',\t'tov_pct_away',\t'fta_per_fga_pct_away',\n",
-    "\"game_possessions\", \"season\", \"date\", \"game_id\"]], on=\"game_id\").to_csv(\"../data/interim/project_and_errors.csv\", index=False)"
+    "\"game_possessions\", \"season\", \"date\", \"game_id\"]], on=\"game_id\").to_csv(\"../data/interim/website/game/project_and_errors.csv\", index=False, float_format=\"%.2f\")"
    ]
   },
   {
