Added Book Logos to Assets and Evaluative Summations to Game Page

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -26311,20 +26311,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2294,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ma_10_ex_mean.markets.to_csv(\"../data/interim/website/game/markets_game.csv\", index=False, float_format=\"%.2f\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2183,
    "metadata": {},
    "outputs": [],
@@ -26335,17 +26321,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2305,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "markets_game = ma_10_ex_mean.markets.merge(ma_10_ex_mean.graded_picks, on=[\"game_id\", \"book\"]).merge(winnings_dash, on=[\"game_id\", \"book\"])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2307,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "markets_game[\"ovr_pk\"] = markets_game.agg_winnings.apply(lambda x: \"L\" if x < 0 else \"W\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2308,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "markets_game.to_csv(\"../data/interim/website/game/markets_game.csv\", index=False, float_format=\"%.2f\")"
+   ]
   },
   {
    "cell_type": "code",
