Added Data Filters and All Appropiate Data Into Game Log Webpage

--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -26125,11 +26125,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2181,
+   "execution_count": 2317,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ml_winnings</th>\n",
+       "      <th>spread_winnings</th>\n",
+       "      <th>total_winnings</th>\n",
+       "      <th>book</th>\n",
+       "      <th>game_id</th>\n",
+       "      <th>season</th>\n",
+       "      <th>agg_winnings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>35.6775</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1386611</td>\n",
+       "      <td>20-21</td>\n",
+       "      <td>-14.3225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>27.4125</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1386426</td>\n",
+       "      <td>20-21</td>\n",
+       "      <td>-22.5875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>35.4450</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>47.7550</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1386321</td>\n",
+       "      <td>20-21</td>\n",
+       "      <td>58.2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>44.3175</td>\n",
+       "      <td>47.3050</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1386236</td>\n",
+       "      <td>20-21</td>\n",
+       "      <td>66.6225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1386411</td>\n",
+       "      <td>20-21</td>\n",
+       "      <td>-75.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50481</th>\n",
+       "      <td>36.1775</td>\n",
+       "      <td>47.7275</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1028263</td>\n",
+       "      <td>18-19</td>\n",
+       "      <td>58.9050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50490</th>\n",
+       "      <td>32.6525</td>\n",
+       "      <td>47.7075</td>\n",
+       "      <td>47.7275</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1027993</td>\n",
+       "      <td>18-19</td>\n",
+       "      <td>128.0875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50499</th>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>25.0000</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1028198</td>\n",
+       "      <td>18-19</td>\n",
+       "      <td>-25.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50508</th>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1028253</td>\n",
+       "      <td>18-19</td>\n",
+       "      <td>-75.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50517</th>\n",
+       "      <td>-25.0000</td>\n",
+       "      <td>47.5925</td>\n",
+       "      <td>47.9400</td>\n",
+       "      <td>average</td>\n",
+       "      <td>1028163</td>\n",
+       "      <td>18-19</td>\n",
+       "      <td>70.5325</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4938 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ml_winnings  spread_winnings  total_winnings     book  game_id season  \\\n",
+       "10         35.6775         -25.0000        -25.0000  average  1386611  20-21   \n",
+       "21         27.4125         -25.0000        -25.0000  average  1386426  20-21   \n",
+       "32         35.4450         -25.0000         47.7550  average  1386321  20-21   \n",
+       "43         44.3175          47.3050        -25.0000  average  1386236  20-21   \n",
+       "54        -25.0000         -25.0000        -25.0000  average  1386411  20-21   \n",
+       "...            ...              ...             ...      ...      ...    ...   \n",
+       "50481      36.1775          47.7275        -25.0000  average  1028263  18-19   \n",
+       "50490      32.6525          47.7075         47.7275  average  1027993  18-19   \n",
+       "50499     -25.0000         -25.0000         25.0000  average  1028198  18-19   \n",
+       "50508     -25.0000         -25.0000        -25.0000  average  1028253  18-19   \n",
+       "50517     -25.0000          47.5925         47.9400  average  1028163  18-19   \n",
+       "\n",
+       "       agg_winnings  \n",
+       "10         -14.3225  \n",
+       "21         -22.5875  \n",
+       "32          58.2000  \n",
+       "43          66.6225  \n",
+       "54         -75.0000  \n",
+       "...             ...  \n",
+       "50481       58.9050  \n",
+       "50490      128.0875  \n",
+       "50499      -25.0000  \n",
+       "50508      -75.0000  \n",
+       "50517       70.5325  \n",
+       "\n",
+       "[4938 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 2317,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2323,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wanted_factors_2.to_csv(\"../data/interim/website/game_log/table_results.csv\", index=False, float_format=\"%.2f\")"
+    "wanted_factors_3 = wanted_factors_2.merge(winnings_dash.query(\"book == 'average'\").loc[:, [\"game_id\", \"ml_winnings\", \"spread_winnings\", \"total_winnings\", \"agg_winnings\"]], on=[\"game_id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2324,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wanted_factors_3.to_csv(\"../data/interim/website/game_log/table_results.csv\", index=False, float_format=\"%.2f\")"
    ]
   },
   {
